[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"
authors = ["refcell"]
homepage = "https://github.com/refcell/veto"
repository = "https://github.com/refcell/veto"
keywords = ["ethereum", "proxy", "security"]
categories = ["development-tools"]
exclude = ["**/target"]

[workspace]
resolver = "2"
members = ["bin/veto", "crates/*"]
default-members = ["bin/veto"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true

[workspace.dependencies]
anyhow = { version = "1.0.100", default-features = false, features = ["std"] }
axum = { version = "0.7.5", default-features = false, features = ["json", "macros", "tokio", "http1"] }
clap = { version = "4.5.48", default-features = false, features = ["std", "derive", "env", "suggestions", "usage", "help"] }
http = { version = "1.1.0", default-features = false, features = ["std"] }
http-body-util = { version = "0.1.2", default-features = false }
hyper = { version = "1.4.1", default-features = false, features = ["client", "server", "http1"] }
hyper-util = { version = "0.1.6", default-features = false, features = ["client", "client-legacy", "http1", "tokio"] }
rstest = { version = "0.26.1", default-features = false }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }
thiserror = "1.0.69"
tokio = { version = "1.47.0", default-features = false, features = ["macros", "rt-multi-thread", "signal", "net", "time"] }
toml = { version = "0.9.7", default-features = false, features = ["parse", "serde", "std"] }
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["env-filter", "fmt", "std"] }
tower = { version = "0.5.2", default-features = false, features = ["util"] }
veto-config = { path = "crates/config", version = "0.1.0", default-features = false }
veto-core = { path = "crates/core", version = "0.1.0", default-features = false }
