[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.88"
authors = ["refcell"]
homepage = "https://github.com/refcell/veto"
repository = "https://github.com/refcell/veto"
keywords = ["ethereum", "proxy", "security"]
categories = ["development-tools"]
exclude = ["**/target"]

[workspace]
resolver = "2"
members = [
    "bin/veto",
    "crates/*",
    "examples/anvil-veto-allow-all",
    "examples/anvil-veto-blocklist",
]
default-members = ["bin/veto"]

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
opt-level = 1
overflow-checks = false

[profile.bench]
debug = true

[workspace.dependencies]
# Workspace
veto-core = { path = "crates/core", version = "0.1.0" }
veto-config = { path = "crates/config", version = "0.1.0" }

# General
rstest = "0.26.1"
thiserror = "2.0.17"
http-body-util = "0.1.3"
http = "1.3.1"
tower = "0.5.2"
anyhow = "1.0.100"
hyper = "1.4.1"
axum = "0.8.6"
hyper-util = "0.1.6"
tokio = "1.47.0"
clap = "4.5.49"

# Serialization
serde = "1.0.228"
serde_json = "1.0.145"
toml = "0.9.8"

# Logging
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

# HTTP clients
reqwest = "0.12.9"
