[package]
name = "veto-blocked"
version = "0.1.0"
description = "Preconfigured blocklists for the Veto proxy"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# HTTP
http = { workspace = true }

# Workspace crates
veto-config = { workspace = true }
