[package]
name = "veto-core"
version = "0.1.0"
description = "Core proxy runtime for the Veto project"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
veto-config = { workspace = true }

[dev-dependencies]
http = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true }
