[package]
name = "veto-core"
version = "0.1.0"
description = "Core proxy runtime for the Veto project"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
exclude.workspace = true

[lints]
workspace = true

[dependencies]
# HTTP
axum = { version = "0.8.6", default-features = false, features = ["http1", "tokio"] }
http = { workspace = true }
http-body-util = { version = "0.1.3", default-features = false }
hyper-util = { version = "0.1.6", default-features = false, features = ["client", "client-legacy", "http1", "tokio"] }

# Errors
thiserror = { workspace = true }

# Serialization
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.145", default-features = false, features = ["std"] }

# Async runtime
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal"] }

# Logging
tracing = { workspace = true }

# Workspace crates
veto-config = { workspace = true }

[dev-dependencies]
# HTTP
http = { workspace = true }

# Testing
rstest = { version = "0.26.1", default-features = false }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5.2", default-features = false, features = ["util"] }
